--- a/spec/traces.api.yaml
+++ b/spec/traces.api.yaml
@@ -26,7 +26,7 @@ paths:
         "500":
           $ref: "#/components/responses/traceApiError"
 
-  /traces/duration:
+  /traces/duration/histogram:
     post:
       tags: 
         - traces
@@ -215,10 +215,10 @@ components:
         application/json:
           schema: { $ref: "#/components/schemas/Spans" }
     durations:
-      description: Durations
+      description: DurationHistogram
       content:
         application/json:
-          schema: { $ref: "#/components/schemas/Durations" }
+          schema: { $ref: "#/components/schemas/DurationHistogram" }
     trace:
       description: A trace with all its spans
       content:
@@ -404,13 +404,13 @@ components:
         - pageSize
         - page
         - matchesTotal
-    Durations:
+    DurationHistogram:
       type: object
       properties:
         buckets:
           type: array
           items: 
-            $ref: "#/components/schemas/DurationBucket"
+            $ref: "#/components/schemas/DurationHistogramBucket"
           description: "List of duration buckets"
         quantiles:
           description: "Quantiles for duration"
@@ -418,7 +418,7 @@ components:
       required:
         - buckets
         - quantiles
-    DurationBucket:
+    DurationHistogramBucket:
       type: object
       properties:
         okCount:
