STAC-20858: Improve ingestion api key authorize endpoint

--- a/spec/ingestion_api_key.api.yaml
+++ b/spec/ingestion_api_key.api.yaml
@@ -64,34 +64,24 @@ paths:
           description: "The key has been deleted"
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
-  /security/ingestion/api_keys/{ingestionApiKey}/validate:
+  /security/ingestion/authorize:
     post:
       tags:
         - ingestionApiKey
-      summary: "Generate a new Ingestion Api Key"
-      description: "Generates token and then returns it in the response, the token can't be obtained any more after that"
-      operationId: generateIngestionApiKey
+      summary: "Check authorization for an Ingestion Api Key"
+      description: "Checks if an ingestion api key is valid"
+      operationId: authorizeIngestionApiKey
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/GenerateIngestionApiKeyRequest"
+              $ref: "#/components/schemas/AuthorizeIngestionApiKeyRequest"
       responses:
         "204":
-          description: The newly generated Ingestion Api Key
-        "400":
-          description: Ingestion Api Key Expired
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/IngestionApiKeyValidateError"
-        "404":
-          description: Ingestion Api Key Not Found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/IngestionApiKeyNotFound"
+          description: Ingestion Api Key is valid
+        "403":
+          description: Forbidden
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 components:
@@ -145,6 +135,14 @@ components:
       required:
         - name
 
+    AuthorizeIngestionApiKeyRequest:
+      type: object
+      properties:
+        apiKey:
+          type: string
+      required:
+        - apiKey
+
     GeneratedIngestionApiKeyResponse:
       type: object
       properties:
@@ -193,32 +191,6 @@ components:
         - $ref: "#/components/schemas/IngestionApiKeyInvalidExpiryError"
       required:
         - _type
-    IngestionApiKeyNotFound:
-      type: object
-      properties:
-        _type:
-          type: string
-          enum:
-            - IngestionApiKeyNotFound
-      required:
-        - _type
-    IngestionApiKeyExpired:
-      type: object
-      properties:
-        _type:
-          type: string
-          enum:
-            - IngestionApiKeyExpired
-        message:
-          type: string
-      required:
-        - _type
-        - message
-    IngestionApiKeyValidateError:
-      discriminator:
-        propertyName: _type
-      oneOf:
-        - $ref: "#/components/schemas/IngestionApiKeyExpired"
 
 
 
