STAC-20818: Change the tag so the backend api will be different and easier to mixin

--- a/spec/ingestion_api_key.api.yaml
+++ b/spec/ingestion_api_key.api.yaml
@@ -67,7 +67,7 @@ paths:
   /security/ingestion/authorize:
     post:
       tags:
-        - ingestionApiKey
+        - authorizeIngestionApiKey
       summary: "Check authorization for an Ingestion Api Key"
       description: "Checks if an ingestion api key is valid"
       operationId: authorizeIngestionApiKey
