STAC-21037 Add component health to the span components

--- a/spec/traces.api.yaml
+++ b/spec/traces.api.yaml
@@ -562,11 +562,14 @@ components:
           type: string
         type:
           type: string
+        healthState:
+          $ref: "common.api.yaml#/components/schemas/HealthStateValue"
       required:
         - id
         - identifier
         - name
         - type
+        - healthState
     Trace:
       type: object
       properties:
