--- a/spec/ingestion_api_key.api.yaml
+++ b/spec/ingestion_api_key.api.yaml
@@ -72,7 +72,7 @@ paths:
       description: "Checks if an ingestion api key is valid"
       operationId: authorizeIngestionApiKey
       parameters:
-        - name: with-receiver-key
+        - name: withReceiverKey
           in: query
           required: false
           description: By default, the endpoint uses only Ingestion API Keys, true value - to verify also Receiver API Key
