STAC-21194: add endpoints for test & preview as well

--- a/spec/health_sync_service_api.yaml
+++ b/spec/health_sync_service_api.yaml
@@ -113,7 +113,7 @@ components:
         - matchedCheckStates
         - unmatchedCheckStates
         - multipleMatchesCheckStates
-    HealthSyncCheckState:
+    ViewCheckState:
       type: object
       properties:
         checkStateId:
